# tensor-ops

./: .gitignore  .travis.yml  Data-Nested.html  Data-Type-Combinator-Util.html  Data-Type-Length-Util.html  Data-Type-Nat-Util.html  Data-Type-Product-Util.html  Data-Type-Remove-Util.html  Data-Type-Sing.html  Data-Type-SnocProd.html  Data-Type-Uniform.html  Data-Type-Vector-Util.html  Data-Vector-Sized.html  GHC-TypeLits-Util.html  README.md  TensorOps-BLAS-HMat.html  TensorOps-BLAS.html  TensorOps-Backend-BTensor.html  TensorOps-Backend-NTensor.html  TensorOps-Gradient.html  TensorOps-Learn-NeuralNet-AutoEncoder.html  TensorOps-Learn-NeuralNet-FeedForward.html  TensorOps-Learn-NeuralNet-Recurrent.html  TensorOps-Learn-NeuralNet.html  TensorOps-Model-NeuralNet-FeedForward.html  TensorOps-Model-NeuralNet.html  TensorOps-NatKind.html  TensorOps-Run.html  TensorOps-TOp.html  TensorOps-Tensor.html  TensorOps-Types.html  TensorOps.html  Type-Class-Higher-Util.html  Type-Family-List-Util.html  Type-Family-Nat-Util.html  Type-NatKind.html  doc-index-126.html  doc-index-33.html  doc-index-37.html  doc-index-38.html  (+69 more)
app/: Dots.hs  LTensorNN.hs  MNIST.hs  NeuralNets.hs
src/: Data.List.Util.html  Data.Nested.html  Data.Type.Combinator.Util.html  Data.Type.Length.Util.html  Data.Type.Nat.Util.html  Data.Type.Product.Util.html  Data.Type.Remove.Util.html  Data.Type.Sing.html  Data.Type.SnocProd.html  Data.Type.Uniform.html  Data.Type.Vector.Util.html  Data.Vector.Sized.html  GHC.TypeLits.Util.html  Orphans.hs  TensorOps.BLAS.HMat.html  TensorOps.BLAS.html  TensorOps.Backend.BTensor.html  TensorOps.Backend.NTensor.html  TensorOps.Gradient.html  TensorOps.Learn.NeuralNet.AutoEncoder.html  TensorOps.Learn.NeuralNet.FeedForward.html  TensorOps.Learn.NeuralNet.Recurrent.html  TensorOps.Learn.NeuralNet.html  TensorOps.Model.NeuralNet.FeedForward.html  TensorOps.Model.NeuralNet.html  TensorOps.NatKind.html  TensorOps.Run.html  TensorOps.TOp.html  TensorOps.Tensor.html  TensorOps.Types.html  TensorOps.hs  TensorOps.html  Type.Class.Higher.Util.html  Type.Family.List.Util.html  Type.Family.Nat.Util.html  Type.NatKind.html
src/Data/: Nested.hs
src/Data/List/: Util.hs
src/Data/Type/: Sing.hs  SnocProd.hs  Uniform.hs
src/Data/Type/Combinator/: Util.hs
src/Data/Type/Length/: Util.hs
src/Data/Type/Nat/: Util.hs
src/Data/Type/Product/: Util.hs
src/Data/Type/Remove/: Util.hs
src/Data/Type/Vector/: Util.hs
src/Data/Vector/: Sized.hs
src/GHC/TypeLits/: Util.hs
src/TensorOps/: BLAS.hs  Gradient.hs  LTensor.hs  Learn.hs  NatKind.hs  Run.hs  TOp.hs  Tensor.hs  Types.hs
src/TensorOps/BLAS/: HMat.hs
src/TensorOps/Backend/: BTensor.hs  LTensor.hs  NTensor.hs  VTensor.hs
src/TensorOps/Learn/: NeuralNet.hs
src/TensorOps/Learn/NeuralNet/: AutoEncoder.hs  FeedForward.hs  Recurrent.hs
src/TensorOps/Model/: NeuralNet.hs
src/TensorOps/Model/NeuralNet/: FeedForward.hs
src/Type/: NatKind.hs
src/Type/Class/Higher/: Util.hs
src/Type/Family/List/: Util.hs
src/Type/Family/Nat/: Util.hs
