name:                tensor-ops
version:             0.1.0.0
synopsis:            Tensor manipulation operations with tensorflow-style
                     automatic differentiation
description:         Please see README.md
homepage:            https://github.com/mstksg/tensor-ops#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TensorOps.Types
                       Data.Nested
                       Data.Type.Combinator.Util
                       Data.Type.Length.Util
                       Data.Type.Nat.Util
                       Data.Type.Product.Util
                       Data.Type.Sing
                       Data.Type.SnocProd
                       Data.Type.Uniform
                       Data.Type.Vector.Util
                       Data.Vector.Sized
                       GHC.TypeLits.Util
                       Orphans
                       TensorOps.Backend.LTensor
                       TensorOps.Backend.VTensor
                       TensorOps.Gradient
                       TensorOps.Run
                       TensorOps.TOp
                       TensorOps.Tensor
                       Type.Class.Higher.Util
                       Type.Family.List.Util
                       Type.Family.Nat.Util
  build-depends:       base >= 4.7 && < 5
                     , ad
                     , distributive
                     , finite-typelits
                     , foldl
                     , mwc-random
                     , primitive
                     , reflection
                     , singletons
                     , statistics
                     , transformers
                     , type-combinators
                     , vector
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

executable tensor-ops-ltensor-nn
  hs-source-dirs:      app
  main-is:             LTensorNN.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base
                     , deepseq
                     , mwc-random
                     , primitive
                     , singletons
                     , statistics
                     , tensor-ops
                     , time
                     , type-combinators
  default-language:    Haskell2010

test-suite tensor-ops-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tensor-ops
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/tensor-ops
